updated book list file

--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container my-5">
-    <h1 class="text-center mb-4">Available Books 123456</h1>
+    <h1 class="text-center mb-4">Available Books</h1>
     <div class="row">
         {% if books %}
             {% for book in books %}
